Fix: Missing space on the top

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -26,7 +26,9 @@ body {
     min-height: 64.4rem;
 
     div.main-content {
-        margin-top: 4.5rem;
+        div.view {
+            margin-top: 8rem;
+        }
     }
 
     a:hover {
