--- a/src/styles/views/_anime.scss
+++ b/src/styles/views/_anime.scss
@@ -5,6 +5,8 @@
 @import "../colors";
 
 div.anime-view {
+    margin-top: 4.5rem !important;
+
     section.info-header {
         img {
             min-height: 19rem;
